[package]
name = "export-setup-parameters"
version = "0.1.0"
authors = ["Findora <engineering@findora.org>"]
edition = "2018"
description = "Export Zcash setup parameters"

[dependencies]
ark-bls12-381 = "^0.3.0"
ark-ec = "^0.3.0"
ark-ff = "^0.3.0"
ark-std = "^0.3.0"
ark-serialize = "^0.3.0"
num-bigint = "0.4.3"
text_io = "0.1.9"
rand = "0.7.0"
rayon = { version = "1", optional = true }

[features]
default = ["std", "parallel"]
std = ["ark-bls12-381/std"]
parallel = ["std", "rayon", "ark-std/parallel"]

[patch.crates-io]
ark-ec = { git = "https://github.com/findora-crypto-lead/algebra" }
ark-ff = { git = "https://github.com/findora-crypto-lead/algebra" }
ark-serialize = { git = "https://github.com/findora-crypto-lead/algebra" }
ark-std = { git = "https://github.com/findora-crypto-lead/std" }
ark-bls12-381 = { git = "https://github.com/findora-crypto-lead/curves" }

